2009-07-21  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix compile error for --disable-ssl builds. NLC.
      Thanks to Gottfried Huber <gottfried.huber at siemens.com> for reporting.

2009-07-08 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/bb_smscconn.c: fixed warnings on unused variables

2009-07-08 Alejandro Guerrieri <aguerrieri at kannel.org>
    * doc/userguide/userguide.xml, gw/bearerbox.c, gw/bearerbox.h, gw/bb_smscconn.c,
      gw/bb_http.c: improvements and bug fixes for the http admin interface:
      - added add-smsc and remove-smsc commands to dinamically add and remove smsc
        without restarting bearerbox
      - start-smsc reloads the configuration from disk
      - fixes bug on stop-smsc and start-smsc to properly report an error when a
	non-existing smsc name is stopped/started
      - fixes a bug when starting a group with 2 or more entries with the same id and
        different admin-id's

2009-07-07 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: merged smpp throttling branch that adds throughput handling
      without sleep for better ACK/DLR performance. Also changed:
      - added return codes to all sending and processing PDU functions
      - added extra error code when we receive malformed PDU
      - inlined smpp_msg_[create|destroy]
      - check validity against SMS_PARAM_UNDEFINED instead of hardcoded >= 0
      - added function to send generic NACK
      - check bind_xxx_resp for error 'already bound' and don't handle it as error
      - re-wrote io_thread function (this is the main loop) to take into accounts all
        possible conditions and throughput
      - implemented async shutdown sequence

2009-06-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: optimizing detection process on CME/CMS Errors (avoid to check
      if CMS when CME was detected). Renaming param value code -> errcode to make it
      more clean.